<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.activity.InputDataActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    <ImageView
        android:id="@+id/iv_inputdata"
        android:layout_width="297dp"
        android:layout_height="211dp"
        android:layout_marginStart="33dp"
        android:src="@drawable/inputdata"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.148" />

    <TextView
        android:id="@+id/tv_info"
        android:layout_width="255dp"
        android:layout_height="38dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/text_inputdata"
        android:textColor="@color/green_600"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/iv_inputdata"
        app:layout_constraintTop_toBottomOf="@+id/iv_inputdata" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="67dp"
        android:layout_marginStart="19dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/tv_name"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_info" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameEditTextLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:layout_marginEnd="19dp"
        android:contentDescription="@string/hint_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_name"
        app:startIconDrawable="@drawable/baseline_person_24">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_name"
            android:inputType="text"/>

    </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_noPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:layout_marginTop="20dp"
            android:text="@string/tv_noPhone"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/tv_name"
            app:layout_constraintTop_toBottomOf="@+id/nameEditTextLayout" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phoneEditTextLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="19dp"
            android:layout_marginEnd="19dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_noPhone"
            app:startIconDrawable="@drawable/baseline_phone_24">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint_nophone"
                android:inputType="phone" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_noRekening"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/tv_norekening"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/tv_noPhone"
            app:layout_constraintTop_toBottomOf="@id/phoneEditTextLayout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/rekeningEditTextLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="19dp"
            android:layout_marginEnd="19dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_noRekening"
            app:startIconDrawable="@drawable/baseline_account_balance_24">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:hint="@string/hint_rekening"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/tv_check"
            android:textSize="10sp"
            app:layout_constraintStart_toStartOf="@+id/rekeningEditTextLayout"
            app:layout_constraintTop_toBottomOf="@+id/rekeningEditTextLayout"
            tools:ignore="SmallSp" />

        <Button
            android:id="@+id/btn_submitData"
            android:layout_width="138dp"
            android:layout_height="40dp"
            android:background="@drawable/button_rounded"
            android:fontFamily="@font/poppins_regular"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="90dp"
            android:text="@string/submit_data"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_check" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>