<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.welcome.WelcomeActivity">

    <View
        android:id="@+id/rectangle_3"
        android:layout_width="435dp"
        android:layout_height="351dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/rectangle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/tv_welcome"
        android:textSize="15sp"
        android:layout_marginTop="70dp"
        android:layout_marginStart="34dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_welcome"
        android:layout_width="285dp"
        android:layout_height="239dp"
        android:src="@drawable/welcome_img"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.274"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tv_addtrash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_marginStart="19dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/tv_addtrash"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_welcome" />

    <Button
        android:id="@+id/btn_sendTrash"
        android:layout_width="164dp"
        android:layout_height="37dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_rounded"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/txt_btnSendTrash"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_addtrash" />

    <TextView
        android:id="@+id/tv_detectionTrash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:layout_marginTop="77dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/tv_detection"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_sendTrash" />

    <Button
        android:id="@+id/btn_detectionTrash"
        android:layout_width="164dp"
        android:layout_height="37dp"
        android:layout_marginStart="18dp"
        android:background="@drawable/button_rounded"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/txt_btnDetectionTrash"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_detectionTrash" />


</androidx.constraintlayout.widget.ConstraintLayout>