<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.activity.PopUpSuccessActivity">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/success"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/success" />

    <TextView
        android:id="@+id/tv_success"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:layout_marginTop="30dp"
        android:text="@string/tv_success"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/success"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/success" />

    <TextView
        android:id="@+id/tv_success_info"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center"
        android:text="@string/info_success"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_success" />

    <Button
        android:id="@+id/btn_home"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/home"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_success_info" />

<!--    <Button-->
<!--        android:id="@+id/btn_history"-->
<!--        android:layout_width="150dp"-->
<!--        android:layout_marginTop="15dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/history"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/btn_home" />-->

</androidx.constraintlayout.widget.ConstraintLayout>